--- a/Number_Recognition_EIP4A1.ipynb
+++ b/Number_Recognition_EIP4A1.ipynb
@@ -40,7 +40,7 @@
       "metadata": {
         "id": "3m3w1Cw49Zkt",
         "colab_type": "code",
-        "outputId": "aef475ad-81a7-42ac-d5f1-4d64270a7f10",
+        "outputId": "2c943704-99d0-4fdf-97cc-b4a25754141e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 80
@@ -51,7 +51,7 @@
         "!pip install -q keras\n",
         "import keras"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,7 +129,7 @@
       "metadata": {
         "id": "4a4Be72j8-ZC",
         "colab_type": "code",
-        "outputId": "bd3b0f88-3468-44a5-89a1-049c7d5eb124",
+        "outputId": "52de1efd-34d5-4170-b0e3-b78aa7965079",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 299
@@ -141,7 +141,7 @@
         "%matplotlib inline\n",
         "plt.imshow(X_train[0])"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,7 +154,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f5fbf231588>"
+              "<matplotlib.image.AxesImage at 0x7f7ec4eb7550>"
             ]
           },
           "metadata": {
@@ -211,7 +211,7 @@
       "metadata": {
         "id": "0Mn0vAYD9DvB",
         "colab_type": "code",
-        "outputId": "43f6443b-1cdf-4407-af50-2fe8f796f7dd",
+        "outputId": "facda2e2-6588-4448-ca4d-2931496ca7ec",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -220,7 +220,7 @@
       "source": [
         "y_train[:10]"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -256,7 +256,7 @@
       "metadata": {
         "id": "fYlFRvKS9HMB",
         "colab_type": "code",
-        "outputId": "7cf0f6bd-a9e2-4e2d-ff3b-4ee5a2f7231b",
+        "outputId": "3062f4b3-cd7e-4a83-dbb3-a8f5aae4ef3e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 187
@@ -265,7 +265,7 @@
       "source": [
         "Y_train[:10]\n"
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -359,98 +359,85 @@
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
-        "outputId": "396f56ef-e72d-4630-e0df-f2fad159b969",
         "id": "d2MaKw0O4Leh",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 173
-        }
+        "colab": {}
       },
       "source": [
         "from keras.layers import Activation\n",
         "model = Sequential()\n",
         "\n",
         " \n",
-        "model.add(Convolution2D(32, 3, 3, activation='relu', input_shape=(28,28,1))) # output 26*26*32 ; Global RF 3*3\n",
-        "model.add(Convolution2D(64, 3, activation='relu')) # output 24*24*64 ; Global RF 5*5\n",
-        "model.add(Convolution2D(128, 3, activation='relu')) # output 22*22*128 ; Global RF 7*7\n",
-        "model.add(Convolution2D(256, 3, activation='relu')) # output 20*20*256 ; Global RF 9*9\n",
-        "model.add(Convolution2D(512, 3, activation='relu')) # output 18*18*512 ; Global RF 11*11  --acc 98.77\n",
-        "model.add(Convolution2D(1024, 3, activation='relu')) # output 8*8*1024 ; Global RF 13*13  --acc 98.85\n",
-        "model.add(Convolution2D(10, 1, activation='relu')) \n",
-        "model.add(Convolution2D(10, 16))\n",
+        "model.add(Convolution2D(32, 3, activation='relu', input_shape=(28,28,1), padding='same')) # output 26*26*32 ; Global RF 3*3\n",
+        "model.add(Convolution2D(64, 3, activation='relu', padding='same')) # output 24*24*64 ; Global RF 5*5\n",
+        "model.add(Convolution2D(128, 3, activation='relu', padding='same')) # output 22*22*128 ; Global RF 7*7\n",
+        "model.add(Convolution2D(256, 3, activation='relu', padding='same')) # output 20*20*256 ; Global RF 9*9\n",
+        "model.add(Convolution2D(512, 3, activation='relu', padding='same')) # output 18*18*512 ; Global RF 11*11  --acc 98.77\n",
+        "model.add(Convolution2D(32, 1, activation='relu')) # output 18*18*32 ; Global RF 11*11\n",
+        "model.add(MaxPooling2D(pool_size=(2, 2), padding='valid', data_format=None)) # output 9*9*32 ; Global RF 22*22\n",
+        "model.add(Convolution2D(64, 3, activation='relu', padding='same')) # output 24*24*64 ; Global RF 5*5\n",
+        "model.add(Convolution2D(128, 3, activation='relu', padding='same')) # output 22*22*128 ; Global RF 7*7\n",
+        "model.add(Convolution2D(256, 3, activation='relu', padding='same')) # output 20*20*256 ; Global RF 9*9\n",
+        "model.add(Convolution2D(512, 3, activation='relu', padding='same')) # output 18*18*512 ; Global RF 11*11  --acc 98.77\n",
+        "model.add(Convolution2D(10, 14))\n",
         "model.add(Flatten())\n",
         "model.add(Activation('softmax'))"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:66: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
-            "\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:541: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
-            "\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:4432: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
-            "\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:5: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(32, (3, 3), activation=\"relu\", input_shape=(28, 28, 1...)`\n",
-            "  \"\"\"\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "TzdAYg1k9K7Z",
         "colab_type": "code",
-        "outputId": "293064b9-4179-4634-e0f6-6f867c817ef1",
+        "outputId": "13b97b49-2590-4f57-bd28-ffa7567dea53",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 493
+          "height": 629
         }
       },
       "source": [
         "model.summary()"
       ],
-      "execution_count": 0,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Model: \"sequential_1\"\n",
+            "Model: \"sequential_2\"\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "conv2d_1 (Conv2D)            (None, 26, 26, 32)        320       \n",
+            "conv2d_12 (Conv2D)           (None, 28, 28, 32)        320       \n",
             "_________________________________________________________________\n",
-            "conv2d_2 (Conv2D)            (None, 24, 24, 64)        18496     \n",
+            "conv2d_13 (Conv2D)           (None, 28, 28, 64)        18496     \n",
             "_________________________________________________________________\n",
-            "conv2d_3 (Conv2D)            (None, 22, 22, 128)       73856     \n",
+            "conv2d_14 (Conv2D)           (None, 28, 28, 128)       73856     \n",
             "_________________________________________________________________\n",
-            "conv2d_4 (Conv2D)            (None, 20, 20, 256)       295168    \n",
+            "conv2d_15 (Conv2D)           (None, 28, 28, 256)       295168    \n",
             "_________________________________________________________________\n",
-            "conv2d_5 (Conv2D)            (None, 18, 18, 512)       1180160   \n",
+            "conv2d_16 (Conv2D)           (None, 28, 28, 512)       1180160   \n",
             "_________________________________________________________________\n",
-            "conv2d_6 (Conv2D)            (None, 16, 16, 1024)      4719616   \n",
+            "conv2d_17 (Conv2D)           (None, 28, 28, 32)        16416     \n",
             "_________________________________________________________________\n",
-            "conv2d_7 (Conv2D)            (None, 16, 16, 10)        10250     \n",
+            "max_pooling2d_2 (MaxPooling2 (None, 14, 14, 32)        0         \n",
             "_________________________________________________________________\n",
-            "conv2d_8 (Conv2D)            (None, 1, 1, 10)          25610     \n",
+            "conv2d_18 (Conv2D)           (None, 14, 14, 64)        18496     \n",
             "_________________________________________________________________\n",
-            "flatten_1 (Flatten)          (None, 10)                0         \n",
+            "conv2d_19 (Conv2D)           (None, 14, 14, 128)       73856     \n",
             "_________________________________________________________________\n",
-            "activation_1 (Activation)    (None, 10)                0         \n",
+            "conv2d_20 (Conv2D)           (None, 14, 14, 256)       295168    \n",
+            "_________________________________________________________________\n",
+            "conv2d_21 (Conv2D)           (None, 14, 14, 512)       1180160   \n",
+            "_________________________________________________________________\n",
+            "conv2d_22 (Conv2D)           (None, 1, 1, 10)          1003530   \n",
+            "_________________________________________________________________\n",
+            "flatten_2 (Flatten)          (None, 10)                0         \n",
+            "_________________________________________________________________\n",
+            "activation_2 (Activation)    (None, 10)                0         \n",
             "=================================================================\n",
-            "Total params: 6,323,476\n",
-            "Trainable params: 6,323,476\n",
+            "Total params: 4,155,626\n",
+            "Trainable params: 4,155,626\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n"
           ],
@@ -463,11 +450,7 @@
       "metadata": {
         "id": "Zp6SuGrL9M3h",
         "colab_type": "code",
-        "outputId": "30f032f2-7a37-40b2-a4ec-15f12377cbca",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 105
-        }
+        "colab": {}
       },
       "source": [
         "model.compile(loss='categorical_crossentropy',\n",
@@ -475,25 +458,14 @@
         "             metrics=['accuracy'])"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/optimizers.py:793: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
-            "\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3576: The name tf.log is deprecated. Please use tf.math.log instead.\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "4xWoKhPY9Of5",
         "colab_type": "code",
-        "outputId": "448120f2-7de1-4831-cb74-cbb67da54790",
+        "outputId": "64665b68-534e-471f-9c88-2e9df0e6d0ed",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 751
@@ -502,8 +474,17 @@
       "source": [
         "model.fit(X_train, Y_train, batch_size=32, nb_epoch=10, verbose=1)"
       ],
-      "execution_count": 0,
+      "execution_count": 19,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow_core/python/ops/math_grad.py:1424: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
+          ],
+          "name": "stdout"
+        },
         {
           "output_type": "stream",
           "text": [
@@ -515,9 +496,6 @@
         {
           "output_type": "stream",
           "text": [
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow_core/python/ops/math_grad.py:1424: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
             "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:1033: The name tf.assign_add is deprecated. Please use tf.compat.v1.assign_add instead.\n",
             "\n",
             "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:1020: The name tf.assign is deprecated. Please use tf.compat.v1.assign instead.\n",
@@ -535,25 +513,25 @@
             "\n",
             "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:223: The name tf.variables_initializer is deprecated. Please use tf.compat.v1.variables_initializer instead.\n",
             "\n",
-            "60000/60000 [==============================] - 90s 1ms/step - loss: 0.1607 - acc: 0.9527\n",
+            "60000/60000 [==============================] - 186s 3ms/step - loss: 0.1275 - acc: 0.9604\n",
             "Epoch 2/10\n",
-            "60000/60000 [==============================] - 85s 1ms/step - loss: 0.0718 - acc: 0.9786\n",
+            "60000/60000 [==============================] - 182s 3ms/step - loss: 0.0480 - acc: 0.9858\n",
             "Epoch 3/10\n",
-            "60000/60000 [==============================] - 84s 1ms/step - loss: 0.0538 - acc: 0.9838\n",
+            "60000/60000 [==============================] - 184s 3ms/step - loss: 0.0346 - acc: 0.9897\n",
             "Epoch 4/10\n",
-            "60000/60000 [==============================] - 84s 1ms/step - loss: 0.0462 - acc: 0.9859\n",
+            "60000/60000 [==============================] - 183s 3ms/step - loss: 0.0274 - acc: 0.9915\n",
             "Epoch 5/10\n",
-            "60000/60000 [==============================] - 83s 1ms/step - loss: 0.0374 - acc: 0.9883\n",
+            "60000/60000 [==============================] - 182s 3ms/step - loss: 0.0231 - acc: 0.9930\n",
             "Epoch 6/10\n",
-            "60000/60000 [==============================] - 83s 1ms/step - loss: 0.0329 - acc: 0.9898\n",
+            "60000/60000 [==============================] - 183s 3ms/step - loss: 0.0201 - acc: 0.9937\n",
             "Epoch 7/10\n",
-            "60000/60000 [==============================] - 83s 1ms/step - loss: 0.0274 - acc: 0.9910\n",
+            "60000/60000 [==============================] - 183s 3ms/step - loss: 0.0166 - acc: 0.9948\n",
             "Epoch 8/10\n",
-            "60000/60000 [==============================] - 83s 1ms/step - loss: 0.0244 - acc: 0.9919\n",
+            "60000/60000 [==============================] - 182s 3ms/step - loss: 0.0142 - acc: 0.9955\n",
             "Epoch 9/10\n",
-            "60000/60000 [==============================] - 83s 1ms/step - loss: 0.0225 - acc: 0.9921\n",
+            "60000/60000 [==============================] - 182s 3ms/step - loss: 0.0132 - acc: 0.9957\n",
             "Epoch 10/10\n",
-            "60000/60000 [==============================] - 83s 1ms/step - loss: 0.0195 - acc: 0.9935\n"
+            "60000/60000 [==============================] - 183s 3ms/step - loss: 0.0111 - acc: 0.9965\n"
           ],
           "name": "stdout"
         },
@@ -561,13 +539,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f5fbed452e8>"
+              "<keras.callbacks.History at 0x7f7eb6dd6ac8>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 19
         }
       ]
     },
@@ -589,7 +567,7 @@
       "metadata": {
         "id": "mkX8JMv79q9r",
         "colab_type": "code",
-        "outputId": "12b40961-4d97-4d75-b3bb-5b317e02d249",
+        "outputId": "54009f59-4e86-4a1c-e88c-7e4141e52903",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -598,12 +576,12 @@
       "source": [
         "print(score)"
       ],
-      "execution_count": 0,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[0.05078951814261163, 0.9865]\n"
+            "[0.03265566540587952, 0.992]\n"
           ],
           "name": "stdout"
         }
