--- a/Number_Recognition_EIP4A1.ipynb
+++ b/Number_Recognition_EIP4A1.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "Number Recognition EIP4A1.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
+      "collapsed_sections": [
+        "aNyZv-Ec52ot"
+      ],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -291,68 +293,13 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "kJXPgNoi-DiZ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# # basic code already existing\n",
-        "# # from keras.layers import Activation\n",
-        "# model = Sequential()\n",
-        "\n",
-        " \n",
-        "# model.add(Convolution2D(32, 3, 3, activation='relu', input_shape=(28,28,1)))\n",
-        "# model.add(Convolution2D(10, 1, activation='relu'))\n",
-        "# model.add(Convolution2D(10, 26))\n",
-        "# model.add(Flatten())\n",
-        "# model.add(Activation('softmax'))"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "osKqT73Q9JJB",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# from keras.layers import Activation\n",
-        "# model = Sequential()\n",
-        "\n",
-        " \n",
-        "# model.add(Convolution2D(32, 3, 3, activation='relu', input_shape=(28,28,1))) # output 26*26*32 ; Global RF 3*3\n",
-        "# model.add(Convolution2D(64, 3, activation='relu')) # output 24*24*64 ; Global RF 5*5\n",
-        "# model.add(Convolution2D(128, 3, activation='relu')) # output 22*22*128 ; Global RF 7*7\n",
-        "# model.add(Convolution2D(256, 3, activation='relu')) # output 20*20*256 ; Global RF 9*9\n",
-        "# model.add(Convolution2D(512, 3, activation='relu')) # output 18*18*256 ; Global RF 11*11\n",
-        "# model.add(Convolution2D(32, 1, activation='relu')) # output 18*18*32 ; Global RF 11*11\n",
-        "# model.add(MaxPooling2D(pool_size=(2, 2), strides=None, padding='valid', data_format=None)) # output 9*9*32 ; Global RF 22*22\n",
-        "# model.add(Convolution2D(64, 3, activation='relu')) # output 7*7*64 ; Global RF 24*24\n",
-        "# model.add(Convolution2D(128, 3, activation='relu')) # output 5*5*128 ; Global RF 26*26\n",
-        "# model.add(Convolution2D(256, 3, activation='relu')) # output 3*3*256 ; Global RF 28*28\n",
-        "# model.add(Convolution2D(512, 3, activation='relu'))  # output 1*1*512 ; Global RF 30*30\n",
-        "# model.add(Convolution2D(10, 1, activation='relu')) # output 1*1*10\n",
-        "# model.add(Flatten())\n",
-        "# model.add(Activation('softmax'))"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "3FGMUuwL4UHO",
         "colab_type": "text"
       },
       "source": [
-        "Exploring other options\n",
-        "Till 512 - 98.77\n",
-        "Till 1024 - 98.85\n",
-        "Double 512 and double 1024 - 98.76\n"
+        "# Custom CNN Model"
       ]
     },
     {
@@ -588,140 +535,14 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "OCWoJkwE9suh",
-        "colab_type": "code",
-        "colab": {}
+        "id": "f-2wSBZ5-cnF",
+        "colab_type": "text"
       },
       "source": [
-        "# y_pred = model.predict(X_test)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Ym7iCFBm9uBs",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# print(y_pred[:9])\n",
-        "# print(y_test[:9])"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "CT--y98_dr2T",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# layer_dict = dict([(layer.name, layer) for layer in model.layers])"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2GY4Upv4dsUR",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# import numpy as np\n",
-        "# from matplotlib import pyplot as plt\n",
-        "# from keras import backend as K\n",
-        "# %matplotlib inline\n",
-        "# # util function to convert a tensor into a valid image\n",
-        "# def deprocess_image(x):\n",
-        "#     # normalize tensor: center on 0., ensure std is 0.1\n",
-        "#     x -= x.mean()\n",
-        "#     x /= (x.std() + 1e-5)\n",
-        "#     x *= 0.1\n",
-        "\n",
-        "#     # clip to [0, 1]\n",
-        "#     x += 0.5\n",
-        "#     x = np.clip(x, 0, 1)\n",
-        "\n",
-        "#     # convert to RGB array\n",
-        "#     x *= 255\n",
-        "#     #x = x.transpose((1, 2, 0))\n",
-        "#     x = np.clip(x, 0, 255).astype('uint8')\n",
-        "#     return x\n",
-        "\n",
-        "# def vis_img_in_filter(img = np.array(X_train[2]).reshape((1, 28, 28, 1)).astype(np.float64), \n",
-        "#                       layer_name = 'conv2d_14'):\n",
-        "#     layer_output = layer_dict[layer_name].output\n",
-        "#     img_ascs = list()\n",
-        "#     for filter_index in range(layer_output.shape[3]):\n",
-        "#         # build a loss function that maximizes the activation\n",
-        "#         # of the nth filter of the layer considered\n",
-        "#         loss = K.mean(layer_output[:, :, :, filter_index])\n",
-        "\n",
-        "#         # compute the gradient of the input picture wrt this loss\n",
-        "#         grads = K.gradients(loss, model.input)[0]\n",
-        "\n",
-        "#         # normalization trick: we normalize the gradient\n",
-        "#         grads /= (K.sqrt(K.mean(K.square(grads))) + 1e-5)\n",
-        "\n",
-        "#         # this function returns the loss and grads given the input picture\n",
-        "#         iterate = K.function([model.input], [loss, grads])\n",
-        "\n",
-        "#         # step size for gradient ascent\n",
-        "#         step = 5.\n",
-        "\n",
-        "#         img_asc = np.array(img)\n",
-        "#         # run gradient ascent for 20 steps\n",
-        "#         for i in range(20):\n",
-        "#             loss_value, grads_value = iterate([img_asc])\n",
-        "#             img_asc += grads_value * step\n",
-        "\n",
-        "#         img_asc = img_asc[0]\n",
-        "#         img_ascs.append(deprocess_image(img_asc).reshape((28, 28)))\n",
-        "        \n",
-        "#     if layer_output.shape[3] >= 35:\n",
-        "#         plot_x, plot_y = 6, 6\n",
-        "#     elif layer_output.shape[3] >= 23:\n",
-        "#         plot_x, plot_y = 4, 6\n",
-        "#     elif layer_output.shape[3] >= 11:\n",
-        "#         plot_x, plot_y = 2, 6\n",
-        "#     else:\n",
-        "#         plot_x, plot_y = 1, 2\n",
-        "#     fig, ax = plt.subplots(plot_x, plot_y, figsize = (12, 12))\n",
-        "#     ax[0, 0].imshow(img.reshape((28, 28)), cmap = 'gray')\n",
-        "#     ax[0, 0].set_title('Input image')\n",
-        "#     fig.suptitle('Input image and %s filters' % (layer_name,))\n",
-        "#     fig.tight_layout(pad = 0.3, rect = [0, 0, 0.9, 0.9])\n",
-        "#     for (x, y) in [(i, j) for i in range(plot_x) for j in range(plot_y)]:\n",
-        "#         if x == 0 and y == 0:\n",
-        "#             continue\n",
-        "#         ax[x, y].imshow(img_ascs[x * plot_y + y - 1], cmap = 'gray')\n",
-        "#         ax[x, y].set_title('filter %d' % (x * plot_y + y - 1))\n",
-        "\n",
-        "# vis_img_in_filter()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9tvptcn8dxvp",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "**Validation Accuracy of 99.2% !**"
+      ]
     }
   ]
 }
