--- a/Number_Recognition_EIP4A1.ipynb
+++ b/Number_Recognition_EIP4A1.ipynb
@@ -53,7 +53,7 @@
         "!pip install -q keras\n",
         "import keras"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,7 +143,7 @@
         "%matplotlib inline\n",
         "plt.imshow(X_train[0])"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,7 +222,7 @@
       "source": [
         "y_train[:10]"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -267,7 +267,7 @@
       "source": [
         "Y_train[:10]\n"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -314,17 +314,17 @@
         "model = Sequential()\n",
         "\n",
         " \n",
-        "model.add(Convolution2D(32, 3, activation='relu', input_shape=(28,28,1), padding='same')) # output 26*26*32 ; Global RF 3*3\n",
-        "model.add(Convolution2D(64, 3, activation='relu', padding='same')) # output 24*24*64 ; Global RF 5*5\n",
-        "model.add(Convolution2D(128, 3, activation='relu', padding='same')) # output 22*22*128 ; Global RF 7*7\n",
-        "model.add(Convolution2D(256, 3, activation='relu', padding='same')) # output 20*20*256 ; Global RF 9*9\n",
-        "model.add(Convolution2D(512, 3, activation='relu', padding='same')) # output 18*18*512 ; Global RF 11*11  --acc 98.77\n",
-        "model.add(Convolution2D(32, 1, activation='relu')) # output 18*18*32 ; Global RF 11*11\n",
-        "model.add(MaxPooling2D(pool_size=(2, 2), padding='valid', data_format=None)) # output 9*9*32 ; Global RF 22*22\n",
-        "model.add(Convolution2D(64, 3, activation='relu', padding='same')) # output 24*24*64 ; Global RF 5*5\n",
-        "model.add(Convolution2D(128, 3, activation='relu', padding='same')) # output 22*22*128 ; Global RF 7*7\n",
-        "model.add(Convolution2D(256, 3, activation='relu', padding='same')) # output 20*20*256 ; Global RF 9*9\n",
-        "model.add(Convolution2D(512, 3, activation='relu', padding='same')) # output 18*18*512 ; Global RF 11*11  --acc 98.77\n",
+        "model.add(Convolution2D(32, 3, activation='relu', input_shape=(28,28,1), padding='same')) \n",
+        "model.add(Convolution2D(64, 3, activation='relu', padding='same')) \n",
+        "model.add(Convolution2D(128, 3, activation='relu', padding='same')) \n",
+        "model.add(Convolution2D(256, 3, activation='relu', padding='same')) \n",
+        "model.add(Convolution2D(512, 3, activation='relu', padding='same')) \n",
+        "model.add(Convolution2D(32, 1, activation='relu')) \n",
+        "model.add(MaxPooling2D(pool_size=(2, 2), padding='valid', data_format=None)) \n",
+        "model.add(Convolution2D(64, 3, activation='relu', padding='same')) \n",
+        "model.add(Convolution2D(128, 3, activation='relu', padding='same')) \n",
+        "model.add(Convolution2D(256, 3, activation='relu', padding='same')) \n",
+        "model.add(Convolution2D(512, 3, activation='relu', padding='same')) \n",
         "model.add(Convolution2D(10, 14))\n",
         "model.add(Flatten())\n",
         "model.add(Activation('softmax'))"
@@ -346,7 +346,7 @@
       "source": [
         "model.summary()"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -421,7 +421,7 @@
       "source": [
         "model.fit(X_train, Y_train, batch_size=32, nb_epoch=10, verbose=1)"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -523,7 +523,7 @@
       "source": [
         "print(score)"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
